06-deploy-ops/04-grafana/grafana-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
   kubernetes.io/ingress.class: "nginx"
   kubernetes.io/tls-acme: 'true'
  name: grafana-ui
  namespace: ops
spec:
  tls:
  - hosts:
          - grafana.4711.cloud
    secretName: grafana-4711-crt
  rules:
  - host: grafana.4711.cloud
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 80
        path: /
